# soundpadrc

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint-pr.yml  publish-test.yml  publish-to-test-pypi.yml  publish.yml  release.yml  tag.yml
src/example_package_r4b2/: soundpad.py
src/soundpadrc/: __init__.py  soundpad.py  soundpadrc.py
tests/: test.py
