[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soundpadrc"
version = "0.0.7"
authors = [{ name = "r4b2", email = "pypi@r4b2.de" }]
description = "Control Soundpad with Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
dependencies = ["xmltodict"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/yggdrion/soundpadrc"
Issues = "https://github.com/yggdrion/soundpadrc/issues"
