[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "soundpadrc"
# version = "0.5.0"
dynamic = ["version"]
authors = [{ name = "r4b2", email = "pypi@r4b2.de" }]
description = "Control Soundpad with Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
dependencies = ["xmltodict"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/yggdrion/soundpadrc"
Issues = "https://github.com/yggdrion/soundpadrc/issues"
